--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
+    "javascript-time-ago": "^2.5.7",
     "next": "12.3.1",
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "telegram": "^2.13.1"
   },
   "devDependencies": {
