--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,7 @@ deploy:
   only:
     - main
   script:
-    - touch .env
-    - echo ${ENV} > .env
+    - cp ${ENV}  .env
     - sudo apt-get install -y python3-pip
     - sudo pip3 install --upgrade setuptools
     - sudo pip3 install docker-compose
